alignment fixed

--- a/styles/game.css
+++ b/styles/game.css
@@ -29,7 +29,7 @@ margin: 0;
 .title-icon{
     /* border: 1px solid tomato; */
     margin-right: 10px;
-    width: 50%;
+    width: 28%;
     height: 50%;
 }
 .primary-color{
@@ -193,6 +193,7 @@ li a{
 .game-list{
     margin: 0 auto;
     background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+    height: 380px;
 }
 .first-column{
     display: flex;
@@ -200,8 +201,9 @@ li a{
     /* grid-template-columns: repeat(5, 1fr); */
 
     gap: 20px;
-    width: 80%;
+    width: 60%;
     margin: 20px auto;
+    padding-top: 60px;
 }
 .image-styls{
     display: flex;
@@ -227,18 +229,19 @@ li a{
     width: 70%;
     margin: 20px auto;
 }
+/* footer section */
 .game-icon-footer{
     display: flex;
     width: 14%;
     padding-top: 50px;
     align-items: center;
     margin: 0 auto;
-    font-size: 1.5rem;
+    font-size: 2rem;
     color: #FFF;
 }
 .background-color{
     background: #0B0223;
-    height: 400px;
+    height: 456px;
     justify-content: center;
     align-items: center;
 }
@@ -256,6 +259,7 @@ li a{
     gap: 30px;
     width: 40%;
     margin: 30px auto;
+    justify-items: center;
 }
 .terms{
     display: grid;
